# Repo-AI-LLM-Solutions-Architect-Project

./: AI_LLM_Project_Template.md  README.md
03_sesion_3/: README.md
04_sesion_4/: README.md
06_final-project-template/architecture/adr/: README.md
07_artefactos/: 01_alcance_minimo.md  02_archivos_obligatorios.md  03_criterios_evaluacion.md  04_entregables.md  Makefile  ci.yml
07_final-project-template/: .gitignore  Makefile  requirements.txt
artefactos/: env.example
final-project-template/: .env.example  README.md  pyproject.toml  requirements-azure.txt  requirements-dev.txt.txt
